# ifdb

./: .env.sample  .gitignore  CLAUDE.md  compare_parsers_simple.py  copyurqw.cmd  db.sqlite3  docker-compose.yml  drop_all.sql  genreqs.cmd  hard_reset.cmd  hard_reset.sh  ifdb.sublime-workspace  ifwiki_urls_all.txt  justfile  m.cmd  manage.py  migration_comparison_results.json  mypy.ini  pyproject.toml  requirements.add  requirements.txt  test_urls.py  version.txt
contest/: admin.py  editor.py  models.py  tests.py  urls.py  views.py  voting.py
core/: admin.py  crawler.py  feedfetcher.py  forms.py  models.py  packages.py  snippets.py  taskqueue.py  tasks.py  tests.py  urls.py  views.py
curation/: admin.py  apps.py  diff.py  discovery.py  edit.py  enrichment.py  fetch.py  gameinfo.py  llm.py  manual.py  manual_reconcile.py  merge.py  models.py  openrouter.py  passes.py  providers.py  reconcile.py  split.py  tasks.py  test_dedup_personality_aliases.py  test_diff.py  test_discovery.py  test_edit.py  test_enrichment.py  test_fetch.py  test_gameinfo.py  test_llm.py  test_providers.py  test_reconcile.py  tests.py  urls.py  views.py
frontend/: editDiff.ts  editor.ts  llmModels.ts  main.ts  reconcile.ts  tsconfig.json
games/: admin.py  game_details.py  importer.py  models.py  search.py  taskqueue.py  tasks.py  test_migration_comparison.py  tools.py  updater.py  uploads.py  urls.py  views.py
ifdb/: celery.py  permissioner.py  settings.py  urls.py  wsgi-zok.py  wsgi.py
kontigr/: settings.py  urls.py
loonchator/: build-dbg.cmd  build.cmd  config-debug.go  config.go  (+14 more)
(+318 files in other folders)
