[project]
name = "ifdb"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "confusable-homoglyphs>=3.3.1",
    "croniter>=6.0.0",
    "django>=5.2.10",
    "django-debug-toolbar>=6.2.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-recaptcha>=4.1.0",
    "django-registration>=5.2.1",
    "dnspython>=2.8.0",
    "html2text>=2025.4.15",
    "markdown>=3.10.1",
    "markdown-del-ins>=1.0.0",
    "mwparserfromhell>=0.7.2",
    "plumbum>=1.10.0",
    "psycopg[binary]>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "uwsgi>=2.0.31",
]

[tool.ruff]
line-length = 79
target-version = "py313"
# Enable preview features
preview = true

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes by default.
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Django settings files use star imports
"*/settings.py" = ["F403", "F405"]
# Test file needs Django setup before imports
"games/test_migration_comparison.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Enable preview mode for enhanced formatting
preview = true
